[gd_scene load_steps=6 format=2]

[ext_resource path="res://Temp Assets/Bit-Bonanza-10x10/no-background/Misc-no-bg.png" type="Texture" id=1]
[ext_resource path="res://Systems/InteractHurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Props/Key.gd" type="Script" id=3]
[ext_resource path="res://Temp Assets/1-bit-input-prompts-pixel-16/Tilemap/tilemap_white.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[node name="Key" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 200, 10, 10 )

[node name="InteractHurtbox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="InteractHurtbox" index="0"]
shape = SubResource( 1 )

[node name="InteractNotification" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -32 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 325, 173, 11, 10 )

[connection signal="area_entered" from="InteractHurtbox" to="." method="_on_InteractHurtbox_area_entered"]
[connection signal="area_exited" from="InteractHurtbox" to="." method="_on_InteractHurtbox_area_exited"]

[editable path="InteractHurtbox"]
